--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,47 +4,45 @@ version: 1.0.0
 homepage:
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
-  flutter: '>=3.3.0'
+    sdk: ">=3.1.0 <4.0.0"
+    flutter: ">=3.3.0"
 
 dependencies:
-  # FCM
-  firebase_core: ^2.22.0
-  firebase_messaging: ^14.7.4
+    # FCM
+    firebase_core: ^2.22.0
+    firebase_messaging: ^14.7.4
 
-  flutter:
-    sdk: flutter
+    flutter:
+        sdk: flutter
 
-  # local notification
-  flutter_local_notifications: ^16.1.0
+    # local notification
+    flutter_local_notifications: ^16.1.0
 
-  http: ^1.1.0
-  huawei_push: ^6.11.0+300
-  plugin_platform_interface: ^2.0.2
-  rxdart: ^0.27.7
+    http: ^1.1.0
+    huawei_push: ^6.12.0+300
+    plugin_platform_interface: ^2.0.2
+    rxdart: ^0.27.7
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
-  flutter_test:
-    sdk: flutter
-
+    flutter_lints: ^2.0.0
+    flutter_test:
+        sdk: flutter
 
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The 'pluginClass' specifies the class (in Java, Kotlin, Swift, Objective-C, etc.)
-  # which should be registered in the plugin registry. This is required for
-  # using method channels.
-  # The Android 'package' specifies package in which the registered class is.
-  # This is required for using method channels on Android.
-  # The 'ffiPlugin' specifies that native code should be built and bundled.
-  # This is required for using `dart:ffi`.
-  # All these are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
-  plugin:
-    platforms:
-      android:
-        package: com.jackwill.jack_notification
-        pluginClass: JackNotificationPlugin
-      ios:
-        pluginClass: JackNotificationPlugin
-
+    # This section identifies this Flutter project as a plugin project.
+    # The 'pluginClass' specifies the class (in Java, Kotlin, Swift, Objective-C, etc.)
+    # which should be registered in the plugin registry. This is required for
+    # using method channels.
+    # The Android 'package' specifies package in which the registered class is.
+    # This is required for using method channels on Android.
+    # The 'ffiPlugin' specifies that native code should be built and bundled.
+    # This is required for using `dart:ffi`.
+    # All these are used by the tooling to maintain consistency when
+    # adding or updating assets for this project.
+    plugin:
+        platforms:
+            android:
+                package: com.jackwill.jack_notification
+                pluginClass: JackNotificationPlugin
+            ios:
+                pluginClass: JackNotificationPlugin
